Migrate data attributes to attributes definition structure and implement attribute engine to validate and manage attributes and their content